# text-tote

./: .gitignore
embedder/: README.md  definitions.py  main.py  pyproject.toml  settings.ini
embedder/requirements/: common.txt  dev.txt
embedder/src/text_tote_embedder/: cli.py  configuration.py  db.py  dbmigrator.py  embedder.py
embedder/src/text_tote_embedder/cli/: cli.py  cli_salmon.py  contentextractor.py  db.py  db_salmon.py  dbmigrator.py  request_service.py  schemas.py  scraper_salmon.py
embedder/src/text_tote_embedder/cli/migrations/: V1__initial_schema.sql
embedder/src/text_tote_embedder/embeddings/: embedder.py
embedder/tests/: settings.ini  test_contentextractor.py  test_db.py  test_db.test_migrate_db.approved.json  test_embedder.py  test_embedder.test_correct_model_used.approved.txt  test_embedder.test_mean_pools_two_embeddings_correctly.approved.txt  test_request_service.py  test_request_service.test_fails_when_status_code_is_not_200.approved.txt  test_request_service.test_retrieves_content.approved.txt  test_works.py
graby/: composer.json  index.php
